--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,7 @@ table {
 /* ============================= BELOW  ========================= */
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 
 #notFound {
   font-size: 3rem;
@@ -228,4 +229,15 @@ body {
   to {
     opacity: 1;
   }
+}
+
+.reverseContent {
+  flex-direction: row-reverse;
+}
+
+.aboutDiv {
+  margin-top: 2rem;
+  align-items: center;
+  justify-content: space-around;
+  height: 75rem;
 }
