--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,10 @@ table {
   font-size: 3rem;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
 }
