--- a/src/index.css
+++ b/src/index.css
@@ -261,6 +261,25 @@ body {
 .burger-open {
   width: 15rem;
   height: 12rem;
-  background-color: #e6ddc6;
+  background-color: #b2b1b9;
   border-radius: 10px;
+}
+
+.tab {
+  display: flex;
+  width: 8rem;
+  height: 2.5rem;
+  border: 2px solid grey;
+  justify-content: center;
+  font-size: 1.3rem;
+  align-items: center;
+  border-radius: 10px;
+  text-decoration: none;
+  color: #ffffff;
+  margin: 1rem;
+}
+@media (max-width: 1300px) {
+  .tab {
+    display: none;
+  }
 }
