--- a/src/index.css
+++ b/src/index.css
@@ -140,24 +140,16 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-.blue {
-  background-color: DodgerBlue;
-}
-
-.green {
-  background-color: MediumSeaGreen;
-}
-
 .homeButton {
-  background-color: #93b5c6;
+  background-color: #000000;
 }
 
 .loginBG {
-  background-image: url("./imgs/image1.jpg");
+  background-color: #000000;
 }
 
 .signupBG {
-  background-image: url("./imgs/image2.jpg");
+  background-color: #000000;
 }
 
 .chevron {
@@ -246,6 +238,12 @@ body {
   height: 75rem;
 }
 
+@media (max-width: 800px) {
+  .aboutDiv {
+    height: 135rem;
+  }
+}
+
 .procedureDiv {
   align-items: center;
   margin-top: 2rem;
@@ -261,25 +259,65 @@ body {
 .burger-open {
   width: 15rem;
   height: 12rem;
-  background-color: #b2b1b9;
+  background-color: #292725;
   border-radius: 10px;
+}
+@media (max-width: 580px) {
+  .burger-open {
+    width: 10rem;
+    height: 10rem;
+  }
+}
+@media (max-width: 440px) {
+  .burger-open {
+    width: 8rem;
+    height: 10rem;
+  }
 }
 
 .tab {
   display: flex;
   width: 8rem;
   height: 2.5rem;
-  border: 2px solid grey;
+  border: 2px solid #098dcd;
   justify-content: center;
   font-size: 1.3rem;
   align-items: center;
   border-radius: 10px;
   text-decoration: none;
-  color: #ffffff;
+  background-color: #000000;
+  color: #393e46;
   margin: 1rem;
+  transition: 1s ease-in-out;
+}
+
+.tab:hover {
+  background-color: #eeeeee;
+  transition: 1s ease-in-out;
 }
 @media (max-width: 1300px) {
   .tab {
     display: none;
   }
+}
+
+.theTab {
+  display: flex;
+  width: 8rem;
+  height: 2.5rem;
+  border: 2px solid #098dcd;
+  justify-content: center;
+  font-size: 1.3rem;
+  align-items: center;
+  border-radius: 10px;
+  text-decoration: none;
+  background-color: #000000;
+  color: #393e46;
+  margin: 1rem;
+  transition: 1s ease-in-out;
+}
+
+.theTab:hover {
+  background-color: #eeeeee;
+  transition: 1s ease-in-out;
 }
