--- a/src/index.css
+++ b/src/index.css
@@ -324,7 +324,72 @@ body {
 
 .categories {
   width: 10rem;
-  font-size: 5rem;
+  font-size: 1.5rem;
+  height: 2rem;
   padding: auto;
   text-align-last: center;
+}
+
+.pagination {
+  display: flex;
+  width: 50%;
+  margin: 1rem auto 4rem;
+  justify-content: space-around;
+}
+
+.pagination a {
+  display: flex;
+  width: 3rem;
+  height: 2rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  border: 1px solid #6c7ac9;
+  color: #6c7ac9;
+}
+
+.pagination a:hover {
+  cursor: pointer;
+}
+.active a {
+  color: #ffffff;
+  background: #6c7ac9;
+}
+
+.burgerContainer.open {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  position: absolute;
+  width: 10rem;
+  height: 10rem;
+  right: 6vw;
+  top: 5rem;
+  background-color: #a2dbfa;
+  border-radius: 10px;
+}
+
+.itemsPage {
+  background-color: #d7e9f7;
+}
+
+.message.showMessage {
+  opacity: 1;
+  transition: 1s ease-in-out;
+}
+
+.message {
+  display: flex;
+  opacity: 0;
+  position: fixed;
+  left: 35%;
+  right: 35%;
+  top: 8%;
+  width: 30%;
+  height: 3rem;
+  background-color: #ddffbc;
+  justify-content: center;
+  align-items: center;
+  transition: 1s ease-in-out;
+  border-radius: 10px;
 }
