--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,9 @@ table {
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 
+* {
+  box-sizing: border-box;
+}
 #notFound {
   font-size: 3rem;
 }
@@ -323,17 +326,24 @@ body {
 }
 
 .categories {
+  appearance: none;
   width: 10rem;
-  font-size: 1.5rem;
-  height: 2rem;
+  font-size: 1.1rem;
+  height: 60%;
   padding: auto;
-  text-align-last: center;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #f1f6f9;
+}
+
+.categories:hover {
+  cursor: pointer;
 }
 
 .pagination {
   display: flex;
   width: 50%;
-  margin: 1rem auto 4rem;
+  margin: 4rem auto 4rem;
   justify-content: space-around;
 }
 
