--- a/src/index.css
+++ b/src/index.css
@@ -375,8 +375,9 @@ body {
   height: 10rem;
   right: 6vw;
   top: 5rem;
-  background-color: #a2dbfa;
+  background-color: #d7e9f7;
   border-radius: 10px;
+  border: 2px solid #098dcd;
 }
 
 .itemsPage {
