--- a/src/index.css
+++ b/src/index.css
@@ -377,7 +377,7 @@ body {
   top: 5rem;
   background-color: #d7e9f7;
   border-radius: 10px;
-  border: 2px solid #098dcd;
+  border: 2px solid #bbbfca;
 }
 
 .itemsPage {
